fixes #260 - buttons break on very small screen sizes

--- a/style.css
+++ b/style.css
@@ -141,6 +141,9 @@ a {
     padding: 2px 10px 8px;
     border-radius: 6px;
     border: 0 none;
+
+    display: inline-block;
+    max-width: 80%;
 }
 
 #ok a {
